[package]
name = "grapl-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
chumsky = "0.10"
libfuzzer-sys = "0.4"
rand = "0.9"

[dependencies.grapl]
path = ".."

[[bin]]
name = "expr_parse"
path = "fuzz_targets/expr_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "expr_normalize"
path = "fuzz_targets/expr_normalize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "stmts_resolve"
path = "fuzz_targets/stmts_resolve.rs"
test = false
doc = false
bench = false
